--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Salesforce日记",
     "subTitle":"Salesforce中文日记",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://github.com/woshihaoren123/woshihaoren123.github.io/blob/main/docs/avatar.png",
     "GMEEK_VERSION":"last"
 }
